--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://fanniewallner.github.io/fanniewallner.github.io",
+  "homepage": "http://fanniewallner.github.io/portfolio",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
